name:                fn-roast
version:             0.1.0.0
-- synopsis:
description:         Another rewrite of the coffee roastery management software
homepage:            https://github.com/githubuser/fn-roast#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable fn-roast-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  other-modules:       Api
                     , Api.Types
                     , Config
                     , Config.DbConfig
                     , Config.DbUrl
                     , DatabaseUtils
                     , JsonUtils
                     , Model
  build-depends:       base
                     , Spock
                     , aeson
                     , bytestring
                     , monad-logger
                     , parsec
                     , persistent
                     , persistent-sqlite
                     , persistent-postgresql
                     , persistent-template
                     , string-conversions
                     , text
  default-language:    Haskell2010

test-suite fn-roast-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , fn-roast
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/fn-roast
