name:                frp
version:             0.1.0.0
-- synopsis:
description:         Budget software
homepage:            https://github.com/githubuser/frp3#readme
license:             BSD3
license-file:        LICENSE
author:              Asmund Berge
maintainer:          example@example.com
copyright:           2017 Asmund Berge
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable frp
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:       Api
                     , Api.Types
                     , Config
                     , Config.DbConfig
                     , Config.DbUrl
                     , DatabaseUtils
                     , JsonUtils
                     , Model
  build-depends:       base
                     , Spock
                     , aeson
                     , bytestring
                     , monad-logger
                     , parsec
                     , persistent
                     , persistent-postgresql
                     , persistent-sqlite
                     , persistent-template
                     , pwstore-fast
                     , string-conversions
                     , text
                     , time
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/frp3
